--- a/style.css
+++ b/style.css
@@ -1,36 +1,59 @@
-@import url('https://fonts.googleapis.com/css?family=Baloo+2&display=swap');
 
-*{
- box-sizing: border-box;
- margin:0;
- padding: 0px
-}
-body {
-    margin: 0px;
-    padding:0px;
-    background-color: #4F4F4F;
-    width:100%;
-    font-family: 'Baloo 2', cursive;
-    color: #ffff ;
-}
-.cabecario{
-    background-color:#696969;
-    height:60px;
-    position: relative;
-    margin: 0px;
-    padding: 0px;
-    
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Sintony&display=swap');
+body {   
+    background-color:rgb(255, 254, 254);             
 }
 .info{
-    margin-top:160px ;
+    margin-top:260px ;
     text-align: center;
     text-transform: uppercase;
+    color:#9b9da0;
+    font-family: 'Montserrat', sans-serif; 
 }
-img {
-    opacity:55%;
+img {      
     overflow: hidden;
     background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height:900px ;
+    background-repeat:no-repeat;
+    background-size:cover;
+    width:800px;
+    height:1200px ;
+}
+.carousel-slide{
+    margin:5px 0px 8px 0px;
+    width:100%;    
+    transition: transform 1s ease, opacity .5s ease-out;
+}
+.icon img{
+    opacity:60%;
+    width:125px;
+    height:85px;
+    margin:300px 0px -230px 130px;
+    
+}
+ul {
+    list-style:none;
+    margin:300px 30px 0px 0px ;
+}
+nav {
+    width:90%;
+    position:absolute;
+    display:block;
+    text-align:center;    
+    text-transform:uppercase;
+    font-size:25px; 
+    font-family: 'Sintony', sans-serif;   
+    line-height:30px;
+    letter-spacing:2px;
+}
+
+nav ul li a {
+    color:#212529;    
+}
+a:hover {
+    color:#9b9da0;
+    text-decoration:none;
+}
+.info_extra {
+    font-family: 'Sintony', sans-serif;
 }
