--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,18 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300i&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Sintony&display=swap');
 body {   
-    background-color:rgb(255, 254, 254);             
+    background-color:#212529;    
 }
 .info{
-    margin-top:260px ;
+  
+    opacity:95%;
+    margin-top:260px;
     text-align: center;
     text-transform: uppercase;
     color:#9b9da0;
     font-family: 'Montserrat', sans-serif; 
 }
+
 img {      
     overflow: hidden;
     background-position: center;
@@ -23,13 +26,14 @@ img {
     margin:5px 0px 8px 0px;
     width:100%;    
     transition: transform 1s ease, opacity .5s ease-out;
+    opacity:75%;
 }
 .icon img{
     opacity:60%;
-    width:125px;
-    height:85px;
+    width:155px;
+    height:185px;
     margin:300px 0px -230px 130px;
-    
+  
 }
 ul {
     list-style:none;
@@ -48,11 +52,15 @@ nav {
 }
 
 nav ul li a {
-    color:#212529;    
+    color:#3b3d3f; 
+   
+    
 }
 a:hover {
     color:#9b9da0;
     text-decoration:none;
+    line-height:70px;
+    letter-spacing:5px;
 }
 .info_extra {
     font-family: 'Sintony', sans-serif;
