--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,9 @@ nav {
     line-height:30px;
     letter-spacing:2px;
 }
-
+nav ul li {
+    padding:8px;
+}
 nav ul li a {
     color:#3b3d3f; 
    
