--- a/css/work.css
+++ b/css/work.css
@@ -7,7 +7,7 @@ body {
 }
 .info{  
     opacity:95%;
-    margin-top:400px;
+    margin-top:250px;
     text-align: center;
     text-transform: uppercase;
     color:#9b9da0;
@@ -16,16 +16,18 @@ body {
 
 .img {  
     /*Paralax background faz toda a função imagem deve ser inserida no Css não no html*/
-    background-image: url("https://p4.wallpaperbetter.com/wallpaper/534/619/592/woman-motorcycle-tattoos-tools-wallpaper-bb4fe57578c84f6d06738f4237ae2856.jpg");    
-    background-attachment: fixed;
+    background-image: url("/model-perfil.jpg");    
+    /*background-attachment: fixed;*/
     background-position: center top;
     background-repeat:no-repeat;
     background-size:cover;
-    width:100%;
-    height:550px;    
-    margin:5px 0px 8px 0px;
-    opacity:75%;    
+    width:300px;
+    height:300px;    
+    margin:50px 0px 20px 40%;     
+    opacity:55% ;  
+    border-radius:50%;
 }
+
 .img h2 {
     text-align: center;  
     font-family: 'Bellota Text', cursive;
@@ -40,14 +42,14 @@ body {
     opacity:60%;
     width:155px;
     height:185px;
-    margin:100px 0px -480px 130px;    
+    margin:10px 0px -250px 130px;    
 }
 ul {
     list-style:none;
-    margin:210px 50px 200px 0px ;
+    margin:100px 50px 25px 0px ;
 }
 nav {
-    width:90%;
+    width:100%;
     position:absolute;
     display:block;
     text-align:center;    
@@ -64,8 +66,6 @@ nav ul li {
 nav ul li a {   
     color:#3b3d3f;  
     position: relative;
-   
-     
 }
 a:hover {
     text-decoration: none;    
@@ -96,7 +96,7 @@ li:hover{
     background-color:#58595a; 
     width:2px;
     height:100%;
-    float: right;
+    float:right;
     margin-left:2px;    
 }
 .col-lg-9 {
