--- a/css/contacts.css
+++ b/css/contacts.css
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css?family=Sintony&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Rufina&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Bellota+Text:300&display=swap');
+html {
+    margin:0px;
+    padding:0px;
+}
 body {   
     background-color:#212529;    
 }
@@ -13,10 +17,10 @@ body {
     color:#9b9da0;
     font-family: 'Montserrat', sans-serif; 
 }
-
+/*init-imagens*/
 .img {  
     /*Paralax background faz toda a função imagem deve ser inserida no Css não no html*/
-    background-image: url("../img/model-perfil.jpg");    
+    background-image: url("https://p4.wallpaperbetter.com/wallpaper/2/510/462/face-portrait-women-model-wallpaper-preview.jpg");    
     /*background-attachment: fixed;*/
     background-position: center top;
     background-repeat:no-repeat;
@@ -28,7 +32,7 @@ body {
     border-radius:50%;
 }
 .img-2{
-    background-image: url("../img/model-perfil.jpg");    
+    background-image: url("https://images3.alphacoders.com/696/thumb-1920-696515.jpg");    
     /*background-attachment: fixed;*/
     background-position: left top;
     background-repeat:no-repeat;
@@ -42,39 +46,40 @@ body {
     padding-left:0px;
 }
 .img-3{
-    background-image: url("../img/model-perfil.jpg");    
+    background-image: url("https://p4.wallpaperbetter.com/wallpaper/1004/767/609/nose-rings-hat-women-model-wallpaper-preview.jpg");    
     /*background-attachment: fixed;*/
     background-position: right top;
     background-repeat:no-repeat;
     background-size:cover;
     width:300px;
     height:300px;    
-    margin:-320px 0px 0px 900px;     
+    margin:-320px 0px 0px 930px;     
     opacity:55% ;  
     position:fixed;
     border-radius:50%;
-    padding-left:30px;
-    z-index:2000;
-
+    padding-left:30px;   
 }
+/*end-imagens*/
+
+/*init-imagens-text*/
 .img-2 h2 {
     text-align: center;  
     font-family: 'Bellota Text', cursive;
     font-size:75px; 
-    line-height:30px;
-    letter-spacing:20px;
+    line-height:2px;
+    letter-spacing:30px;
     padding-top:200px;
     color: #DB7093;   
     text-shadow: 3px 5px 2px #272626;
 }
 .img-3 h2 {
-    text-align: center;  
+    text-align:center;  
     font-family: 'Bellota Text', cursive;
     font-size:75px; 
-    line-height:30px;
-    letter-spacing:20px;
+    line-height:3px;
+    letter-spacing:10px;
     padding-top:200px;
-    color: #DB7093;   
+    color: #DB7093;       
     text-shadow: 3px 5px 2px #272626;
 }
 .img  h2 {
@@ -87,6 +92,7 @@ body {
     color: #DB7093;   
     text-shadow: 3px 5px 2px #272626;
 }
+/*end-imagens-text*/
 .icon img{
     opacity:60%;
     width:155px;
@@ -154,5 +160,9 @@ li:hover{
 }
 .col-lg-3 {
     padding-left: 0px;
-    padding-right: 5px;
+    padding-right:5px;
+}
+.imgs {
+    margin:0px;
+    padding:0px;
 }
