--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ img {
 }
 ul {
     list-style:none;
-    margin:300px 30px 0px 0px ;
+    margin:100px 30px 0px 0px ;
 }
 nav {
     width:90%;
@@ -73,4 +73,14 @@ li:hover{
 .col-lg-9 {
     margin:0px;
     padding: 0px;
+}
+.col-lg-3{
+    padding:0px 5px 0px 0px;
+}
+.traso-vert{ 
+    background-color:#3b3d3f; 
+    width:2px;
+    height:100%;
+    float:right;
+    margin-left:2px;    
 }
