--- a/css/style.css
+++ b/css/style.css
@@ -5,42 +5,43 @@ body {
     background-color:#212529;    
 }
 .info{
-  
+    
     opacity:95%;
-    margin-top:260px;
+    margin-top:250px;
     text-align: center;
     text-transform: uppercase;
     color:#9b9da0;
     font-family: 'Montserrat', sans-serif; 
 }
 
-img {      
-    overflow: hidden;
+img {         
     background-position: center;
     background-repeat:no-repeat;
     background-size:cover;
     width:800px;
     height:1200px ;
 }
+
 .carousel {
     margin:5px 0px 8px 0px;
     width:100%;    
     transition: transform 1s ease, opacity .5s ease-out;
     opacity:75%;
 }
-.icon img{
+.icon {background-color:transparent;}
+.icon img{   
     opacity:60%;
     width:155px;
     height:185px;
-    margin:300px 0px -230px 130px;
-  
+    margin:300px 0px -230px 130px;    
 }
-ul {
+ul {   
     list-style:none;
-    margin:100px 30px 0px 0px ;
+    margin:100px 60px 0px 10px ;  
 }
-nav {
-    width:90%;
+nav {  
+   
+    width:100%;
     position:absolute;
     display:block;
     text-align:center;    
@@ -49,14 +50,17 @@ nav {
     font-family: 'Sintony', sans-serif;   
     line-height:30px;
     letter-spacing:2px;
+    
 }
-nav ul li {
-    padding:8px;
+nav ul li {        
+    width:100%;
+    padding:8px;     
 }
 nav ul li a {
+   
     color:#3b3d3f; 
-    padding:8px;
-    
+    position: relative;
+  /*  padding: 0px;*/
 }
 a:hover {
     color:#9b9da0;
@@ -69,13 +73,16 @@ li:hover{
 }
 .info_extra {
     font-family: 'Sintony', sans-serif;
+    
 }
 .col-lg-9 {
     margin:0px;
     padding: 0px;
 }
 .col-lg-3{
-    padding:0px 5px 0px 0px;
+    margin: 0px;
+    padding: 0px;
+    
 }
 .traso-vert{ 
     background-color:#3b3d3f; 
@@ -83,4 +90,33 @@ li:hover{
     height:100%;
     float:right;
     margin-left:2px;    
+}
+@media screen and (max-width:540px){
+.col-lg-3{
+   margin: 0px;
+   padding:0px;    
+}
+.col-lg-9 {
+    margin: 0px;
+    padding: 0px;
+   }
+.icon{   
+    padding: 0px 0px 30px 0px;
+}
+.icon img {
+    margin:16px 0px 224px 130px;    
+}
+.info {
+    padding:3px 0px 0px 0px;
+    margin:-210px 0px 130px 20px;
+}
+.info_extra {
+    margin:218px 0px 200px 0px;    
+}
+ ul   {
+    margin:-194px 0px 0px -40px;
+   
+}
+.traso-vert{display: none;}
+
 }
