--- a/css/work.css
+++ b/css/work.css
@@ -6,6 +6,7 @@ body {
     background-color:#212529;    
 }
 .info{  
+    
     opacity:95%;
     margin-top:250px;
     text-align: center;
@@ -76,18 +77,18 @@ a:hover {
 }
 li:hover{
     border:1px solid #9b9da0;           
-    line-height:30px;
+    line-height:20px;
     letter-spacing:5px;    
 }
 .jumbotron{
     background-color: #212529;
     opacity:95%;
-    margin-top:10px;
+    margin:10px 3px 5px 3px;
     text-align: center;   
     color:#58595a;
     border:2px solid #3b3d3f;
     font-family: 'Rufina', serif;
-    margin-bottom:5px;
+  
 }
 .jumbotron h2{
     text-transform: uppercase;
@@ -100,10 +101,49 @@ li:hover{
     margin-left:2px;    
 }
 .col-lg-9 {
-    padding-left:5px;
-    padding-right: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 .col-lg-3 {
-    padding-left: 0px;
-    padding-right: 5px;
+    margin: 0px;
+    padding: 0px;
 }
+@media screen and (max-width:540px){
+    /*posição do cabeçario*/
+      .col-lg-3{
+         margin: 0px;
+         padding:0px;        
+      }
+      .col-lg-9 {
+       margin: 0px;
+       padding: 0px;
+      }
+      .icon{       
+          padding: 0px 0px 30px 0px;
+      }
+      .icon img {
+          margin:16px 0px 224px 130px; 
+          padding:0px;   
+      }
+      .info {
+          padding:3px 12px 6px 1px;
+          margin:-224px 1px 144px 12px;
+      }
+      .info_extra {
+          margin:218px 0px 200px 0px;
+          
+      }
+      ul   {
+        margin:-194px 0px 0px -40px;
+      }
+      /* fim posição do cabeçario */
+      .img {
+          margin: 25px 0 15px 63px;
+      }
+      .traso-vert{
+          display: none;
+      }
+      .jumbotron h2{
+          font-size: 25px;
+      }
+    }
