--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -121,20 +121,20 @@ li:hover{
         padding: 0px 0px 30px 0px;
     }
     .icon img {
-        margin:5px 0px 183px 130px; 
+        margin:5px 0px 183px 150px; 
         padding:0px; 
-        height:130px;
-        width:120px;  
+        height:98px;
+        width:121px;  
     }
     .info {
         padding:3px 0px 0px 0px;
         margin:-210px 0px 130px 20px;
     }
     .info_extra {
-        margin:218px 2px 20px 2px;     
+        margin:195px 0px 5px 3px;     
     }
-    nav ul   {
-        margin:-194px 0px 0px -40px;    
+     ul   {
+        margin:-194px 9px 10px -40px;    
     }
     /*posição do cabeçario*/    
     .img{
@@ -145,6 +145,8 @@ li:hover{
         font-size:34px;
     }
     .jumbotron {
-        margin:5px ;
+        margin:2px;
+        width:100%;
+        height:225px;
     }
     }
