--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,8 @@ li:hover{
 }
 @media screen and (max-width:540px){
 .col-lg-3{
+    width:100%;
+    height:40%;
    margin: 0px;
    padding:0px;    
 }
@@ -100,15 +102,21 @@ li:hover{
     margin: 0px;
     padding: 0px;
    }
+   #carouselExampleControls img{
+       width:100%;
+       height:500px;
+   }
 .icon{   
-    padding: 0px 0px 30px 0px;
+    padding: 0px 0px 45px 0px;
 }
 .icon img {
-    margin:16px 0px 224px 130px;    
+    width:100px;
+    height:135px;
+    margin:2px 0px 160px 160px;    
 }
 .info {
-    padding:3px 0px 0px 0px;
-    margin:-210px 0px 130px 20px;
+    padding:8px 0px 0px 0px;
+    margin:-220px 0px 0px 20px;
 }
 .info_extra {
     margin:218px 0px 200px 0px;    
